--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -236,6 +236,7 @@ deny 185.100.87.136;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -605,8 +606,6 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
-deny 195.47.238.177;
-deny 195.47.238.178;
 deny 195.47.238.44;
 deny 195.47.238.82;
 deny 195.47.238.83;
@@ -925,6 +924,7 @@ deny 23.137.254.137;
 deny 23.137.254.244;
 deny 23.151.8.8;
 deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -993,6 +993,7 @@ deny 2602:f6f6:2:d31a::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:10:bb36::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1199,9 +1200,6 @@ deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
 deny 2803:6d90:111::67;
 deny 2803:cd80:2000:10::db8f:5f60;
-deny 2a00:16b0:1:243::7012:3117;
-deny 2a00:16b0:1:243::7012:a500;
-deny 2a00:16b0:1:243::7012:e817;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -1305,6 +1303,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1488,8 +1487,6 @@ deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
-deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
-deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -1538,8 +1535,8 @@ deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
-deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1682,7 +1679,6 @@ deny 38.135.24.32;
 deny 38.135.24.33;
 deny 38.135.24.72;
 deny 38.135.25.2;
-deny 38.180.204.182;
 deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
@@ -1918,9 +1914,6 @@ deny 87.120.254.132;
 deny 87.120.93.182;
 deny 88.151.194.24;
 deny 88.80.20.86;
-deny 88.80.26.2;
-deny 88.80.26.3;
-deny 88.80.26.4;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1956,6 +1949,7 @@ deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
+deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
