--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -134,6 +134,7 @@ set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:10:bb36::1;
+set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
@@ -339,9 +340,6 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2803:6d90:111::67;
 set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
-set_real_ip_from 2a00:16b0:1:243::7012:3117;
-set_real_ip_from 2a00:16b0:1:243::7012:a500;
-set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
@@ -445,6 +443,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -628,8 +627,6 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
-set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
-set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -678,8 +675,8 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
-set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
