--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -139,6 +139,7 @@ allow 144.126.133.74;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
+allow 147.45.217.187;
 allow 148.113.152.91;
 allow 149.102.153.38;
 allow 149.202.79.129;
@@ -236,7 +237,6 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -581,7 +581,6 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -605,19 +604,7 @@ allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.47.238.176;
 allow 195.47.238.44;
-allow 195.47.238.82;
-allow 195.47.238.83;
-allow 195.47.238.84;
-allow 195.47.238.86;
-allow 195.47.238.87;
-allow 195.47.238.88;
-allow 195.47.238.89;
-allow 195.47.238.90;
-allow 195.47.238.91;
-allow 195.47.238.92;
-allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1067,6 +1054,7 @@ allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:a140:2262:7686::1;
 allow 2605:a141:2261:4410::1;
 allow 2605:a142:2263:1906::1;
@@ -1277,6 +1265,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1303,7 +1292,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1476,18 +1464,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
-allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
-allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
-allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
-allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
-allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1567,7 +1543,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1679,6 +1654,7 @@ allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
+allow 38.180.204.182;
 allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
@@ -1732,6 +1708,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1814,6 +1791,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
